# JASP

./: CMakeLists.txt  README.md
doc/: LICENSE.txt  ReadMe.txt
src/: main.cpp
tests/: AcmeAnvilReadME.txt  CMakeLists.txt  MakeFinalLispFile.cmd  MakeReadME.cmd  mainfile.ls  mylispfile-alert.lsp  testReadME.txt
tests/inc/: print-line.lh  print-string.lh
tests/projects/: README-Directory-Layout.txt
tests/projects/include/: licenceheader.lh
tests/projects/tools/PoorMansColorizer/release/: main.html
tests/projects/tools/PoorMansColorizer/src/: Makefile  main.ls  make-final-project.bat
tests/projects/tools/PoorMansColorizer/src/include/: pmp-htmlclass.lh  pmp-htmlhead.lh
